graphql-toolkit/tests/snapshots/it_ser_pretty_formatter_query__subscription_unnamed.snap
---
source: graphql-toolkit/tests/it_ser_pretty_formatter_query.rs
expression: query
---
subscription {
  newBlock
}
